syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shreeharibi.notemaker.comments";

message CommentDto {
  string noteId = 1;
  string comment = 2;
}

message CommentSearchRequest {
  string noteId = 1;
}

message CommentSearchResponse {
  repeated CommentDto comment = 1;
}

message AddNewCommentRequest {
  CommentDto comment = 1;
}

message AddNewCommentResponse {
  bool status = 1;
}

message DeleteCommentRequest {
  string commentId = 1;
}

message DeleteCommentResponse {
  bool status = 1;
}

message EditCommentRequest {
  string commentId = 1;
  string comment = 2;
}

message EditCommentResponse {
  bool status = 1;
}

service CommentsService {
  rpc getComments(CommentSearchRequest) returns (CommentSearchResponse);
  rpc addComment(AddNewCommentRequest) returns (AddNewCommentResponse);
  rpc deleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc editComment(EditCommentRequest) returns (EditCommentResponse);
}